--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 Resource - https://www.slideshare.net/AndrewBrown107/what-iwishiknewaboutawscertification
 
 Illustration of a cloud engineer
-![alt text](https://image.slidesharecdn.com/what-i-wish-i-knew-about-aws-certification-210310012626/75/what-iwishiknewaboutawscertification-3-2048.jpg)
+![alt text](https://github.com/davidaw78/aws-cloud-journey/blob/main/images/what-iwishiknewaboutawscertification-3-2048.jpg)
 
 
