--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 Resource - https://www.slideshare.net/AndrewBrown107/what-iwishiknewaboutawscertification
 
 Illustration of a cloud engineer
-![My Remote Image](https://www.dropbox.com/s/.../my-remote-image.jpg?dl=0)
+![My Remote Image](https://github.com/davidaw78/aws-cloud-journey/blob/main/images/what-iwishiknewaboutawscertification-3-2048.jpg)
 
 
