--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 Resource - https://www.slideshare.net/AndrewBrown107/what-iwishiknewaboutawscertification
 
 Illustration of a cloud engineer
-![My Image](images/what-iwishiknewaboutawscertification-3-2048.jpg)
+![mage](images/what-iwishiknewaboutawscertification-3-2048.jpg)
 
 
