--- a/README.me
+++ b/README.me
@@ -3,4 +3,7 @@ Resource - https://www.slideshare.net/AndrewBrown107/what-iwishiknewaboutawscert
 Illustration of a cloud engineer
 ![Screenshot](https://github.com/davidaw78/aws-cloud-journey/blob/main/images/what-iwishiknewaboutawscertification-3-2048.jpg)
 
+The background color is `#ffffff` for light mode and `#000000` for dark mode.
+
+
 
