--- a/README.me
+++ b/README.me
@@ -1,9 +1,7 @@
 Resource - https://www.slideshare.net/AndrewBrown107/what-iwishiknewaboutawscertification
 
 Illustration of a cloud engineer
-![Screenshot](https://github.com/davidaw78/aws-cloud-journey/blob/main/images/what-iwishiknewaboutawscertification-3-2048.jpg)
-
-The background color is `#ffffff` for light mode and `#000000` for dark mode.
+![Screenshot of a comment on a GitHub issue showing an image, added in the Markdown, of an Octocat smiling and raising a tentacle.](https://myoctocat.com/assets/images/base-octocat.svg)
 
 
 
